[package]
name = "DAODTP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "production", features=["mqtt"] }
etherparse = "0.13"
rand = "0.8.5"